--- a/src/components/showvenues.css
+++ b/src/components/showvenues.css
@@ -8,6 +8,16 @@
   margin: 0.5rem 0;
 }
 
+.showvenues__link:hover {
+  background: #4682e2;
+  display: block;
+  max-width: 5rem;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0.5rem 0;
+}
+
 .showvenues__link > a {
   color: #ffffff;
   font-size: 1rem;
