tweaked header a little

--- a/src/index.css
+++ b/src/index.css
@@ -90,17 +90,22 @@ button:hover{
 /*---------------------------- -----------------------------------*/
 #title{
   margin-left:10vw;
+  padding:10px;
+}
+
+div form{
+  text-align: center;
 }
 form, #fake-form{
-  min-width: 300px;
-  width:30vw;
+  width: 300px;
   height: 50vh;
   padding: 20px;
 }
 
-form input{
+form input, #fake-form input{
   display:block;
-  margin:5px 0px 10px 0px;
+  width:100px;
+  margin:5px 0px 10px 100px;
 }
 
 ul {
