VALIDATION: basic html5 form validation added

--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,10 @@ ul li button {
   margin: 2vh 2vw ;
 }
 
+#action_button{
+  background:goldenrod;
+}
 
-
-
-
+action_button:hover{
+ background:green;
+}
