--- a/src/index.css
+++ b/src/index.css
@@ -65,17 +65,23 @@ table {
 }
 
 h1 {
-  font-size: 32px;
+  font-size: 90px;
+  letter-spacing: -5px;
 }
 
 h1, h2, h3, label{
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway-bold', sans-serif;
   padding:5px;
+  color: #22b573;
 }
 
 button {
-  padding:5px;
-  border-radius:5px;
+  font-family: 'Raleway-bold', sans-serif;
+  font-size: 40px;
+  color: #22b573;
+  padding:15px;
+  border-radius:45px;
+  border-width: 0px
 }
 
 p {
@@ -84,12 +90,12 @@ p {
 
 button:hover{
   cursor: pointer;
-  background: #cdcdcd
+  border: 1pt solid #22b573;
 }
 
 /*---------------------------- -----------------------------------*/
 #title{
-  margin-left:10vw;
+  margin-left:2vw;
   padding:10px;
 }
 
@@ -97,12 +103,14 @@ div form{
   text-align: center;
 }
 form, #fake-form{
+  margin: 0 auto;
   width: 300px;
   height: 50vh;
   padding: 20px;
 }
 
 form input, #fake-form input{
+  
   display:block;
   width:100px;
   margin:5px 0px 10px 100px;
@@ -127,26 +135,41 @@ hr{
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+label{
+  font-size: 2vw;
+
+}
 
 ul li button {
   float:right;
   margin-right:10px;
+  font-family: 'Raleway-bold', sans-serif;
+}
+
+#logo {
+  height: 200px;
+  padding-right: 50px;
 }
 
 #venue_portal_button{
   float:right;
   margin-right: 10vw;
   margin-top: 1vh;
+  font-size: 20px;
+ font-family: 'Raleway-medium', sans-serif; 
+
 }
 
-.wrapper, #login_buttons{
+.wrapper {
   margin:0 auto;
   width:80%;
 }
 
 #login_buttons {
+  width:100%;
   display: inline-block;
   margin-top: 2vh;
+
 }
 #login_buttons button{
   margin: 2vh 2vw ;
@@ -158,4 +181,19 @@ ul li button {
 
 action_button:hover{
  background:green;
+}
+
+@media only screen and (max-width: 600px) {
+  .wrapper {
+    text-align:center;
+  }
+
+  #logo{
+    padding-right: 0;
+  }
+
+  label{
+    font-size: 18px;
+  }
+
 }
